Sun Mar 25 17:40:43 MEST 2001  Raphael Manfredi <Raphael_Manfredi@pobox.com>

	Version 0.1.0.
	Initial public alpha relase.
