@@ -1,3 +1,12 @@
+Wed May 30 23:10:54 MEST 2001   Raphael Manfredi <Raphael_Manfredi@pobox.com>
+
+. Description:
+
+	Added LIMITATIONS section to warn about stringify overloading.
+	Since the argument list may be dumped at DFEATURE time, and $self
+	is part of that list, we would recurse when DFEATURE is called
+	and the argument list is printed.
+
 Sun Mar 25 17:40:43 MEST 2001  Raphael Manfredi <Raphael_Manfredi@pobox.com>
 
 	Version 0.1.0.
